--- a/sass/site/compatibility/woocommerce/woocommerce-grid.scss
+++ b/sass/site/compatibility/woocommerce/woocommerce-grid.scss
@@ -157,7 +157,7 @@ p.demo_store,
 
     	&:after,
     	&:before {
-			bottom: 100%;
+			bottom: 99.9%;
 			left: auto;
 			right: 8px;
 			border: solid transparent;
@@ -179,9 +179,9 @@ p.demo_store,
 		&:before {
 			border-color: rgba(230, 230, 230, 0);
 			border-bottom-color: var(--ast-border-color);
-			border-width: 9px;
-			margin-left: -5px;
-			right: 5px;
+			border-width: 7px;
+			margin-left: -12px;
+			right: 7px;
 		}
 
 		.widget_shopping_cart_content {
